--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mud-saver"
 version = "0.1.0"
-authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>"]
+authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Rienößl <t.rioenessl@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
