--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ rocket = "0.4.4"
 [dependencies.rocket_contrib]
 version = "0.4.4"
 default-features = false
-features = ["handlebars_templates"]
+features = ["handlebars_templates", "serve"]
