--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.4"
 serde_json = "1.0.53"
+web-view = { version = "0.5.4", features = ["edge"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
