--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.4"
+serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 web-view = { version = "0.5.4", features = ["edge"] }
+config = "0.9"
+lazy_static = "1.4.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
