--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,5 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install latest nightly
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true  
     - name: Build
       run: cargo +nightly build --verbose
