--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,15 @@ version = "0.1.0"
 authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Rienößl <t.rioenessl@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+chrono = { version = "0.4.11", features = ["serde"] }
+dirs = "2.0.2"
+lazy_static = "1.4.0"
 rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 web-view = { version = "0.5.4", features = ["edge"] }
-lazy_static = "1.4.0"
-chrono = { version = "0.4.11", features = ["serde"] }
-dirs = "2.0.2"
+zip = "0.5.5"
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
