--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 web-view = { version = "0.5.4", features = ["edge"] }
 lazy_static = "1.4.0"
+dirs = "2.0.2"
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
