--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ lazy_static = "1.4.0"
 rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
+uuid = { version = "0.8", features = ["v4"] }
 web-view = { version = "0.5.4", features = ["edge"] }
 zip = "0.5.5"
 
