--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Rienößl <t.rioenessl@gmail.com>"]
 edition = "2018"
 
+[features]
+default = []
+
+embed_ui = ["web-view"]
+
 [dependencies]
 chrono = { version = "0.4.11", features = ["serde"] }
 dirs = "2.0.2"
@@ -12,7 +17,7 @@ rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 uuid = { version = "0.8", features = ["v4"] }
-web-view = { version = "0.5.4", features = ["edge"] }
+web-view = { version = "0.5.4", features = ["edge"], optional = true}
 zip = "0.5.5"
 
 [dependencies.rocket_contrib]
