--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,18 @@ version = "0.1.0"
 authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Rienößl <t.rioenessl@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+
+embed_ui = ["web-view"]
 
 [dependencies]
 rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
-web-view = { version = "0.5.4", features = ["edge"] }
-lazy_static = "1.4.0"
+uuid = { version = "0.8", features = ["v4"] }
+web-view = { version = "0.5.4", features = ["edge"], optional = true}
+zip = "0.5.5"
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
