--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ default = []
 embed_ui = ["web-view"]
 
 [dependencies]
+chrono = { version = "0.4.11", features = ["serde"] }
+dirs = "2.0.2"
+lazy_static = "1.4.0"
 rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
