--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ilammy/msvc-dev-cmd@v1
-    
+      with:
+          sdk: 10.0.18362.1
+
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
       with:
