--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,6 @@ steps:
       set -e
       curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal --default-toolchain $RUSTUP_TOOLCHAIN
       echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
-    env:
-      RUSTUP_TOOLCHAIN: ${{parameters.rust}}
     displayName: Install rust
     condition: ne( variables['Agent.OS'], 'Windows_NT' )
   - script: |
@@ -30,17 +28,13 @@ steps:
       rustup-init.exe -y --profile minimal --default-toolchain %RUSTUP_TOOLCHAIN% --default-host x86_64-pc-windows-msvc
       set PATH=%PATH%;%USERPROFILE%\.cargo\bin
       echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
-    env:
-      RUSTUP_TOOLCHAIN: ${{parameters.rust}}
     displayName: Windows install rust
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
 
   - bash: |
       rustup default $RUSTUP_TOOLCHAIN
       rustup update $RUSTUP_TOOLCHAIN
-    env:
-      RUSTUP_TOOLCHAIN: ${{parameters.rust}}
-    displayName: "Set correct Rust version"
+    displayName: "Set toolchain version"
 
     #build
   - script: cargo build --release --features embed_ui
