--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
   - task: CopyFiles@2
     displayName: Copy assets
     inputs:
-      sourceFolder: '$(Build.SourcesDirectory)/target/$(TARGET)/release/'
+      sourceFolder: '$(Build.SourcesDirectory)/target/release/'
       contents: |
         mud-saver.exe
       targetFolder: '$(Build.BinariesDirectory)/mud-saver'
