--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
 
 # This step help publish targets folder
   - task: CopyFiles@2
-    displayName: Copy assets
+    displayName: Copy application
     inputs:
       sourceFolder: '$(Build.SourcesDirectory)/target/release/'
       contents: |
@@ -54,32 +54,33 @@ steps:
       targetFolder: '$(Build.BinariesDirectory)/mud-saver'
 
   - task: CopyFiles@2
-    displayName: Copy assets
+    displayName: Copy images
     inputs:
       SourceFolder: '$(Build.SourcesDirectory)/images'
       Contents: '**'
       TargetFolder: '$(Build.BinariesDirectory)/mud-saver/images'
   - task: CopyFiles@2
-    displayName: Copy assets
+    displayName: Copy templates
     inputs:
       SourceFolder: '$(Build.SourcesDirectory)/templates'
       Contents: '**'
       TargetFolder: '$(Build.BinariesDirectory)/mud-saver/templates'
   - task: CopyFiles@2
-    displayName: Copy assets
+    displayName: Copy static
     inputs:
       SourceFolder: '$(Build.SourcesDirectory)/static'
       Contents: '**'
       TargetFolder: '$(Build.BinariesDirectory)/mud-saver/static'
   - task: ArchiveFiles@2
-    displayName: Gather assets
+    displayName: Create Archive
     inputs:
       rootFolderOrFile: '$(Build.BinariesDirectory)/mud-saver'
       archiveType: zip
       archiveFile: '$(Build.ArtifactStagingDirectory)/mud-saver-$(Build.BuildNumber)-win64.zip'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+  
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Artifacts
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
