--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,19 @@ edition = "2018"
 [features]
 default = []
 
-embed_ui = ["web-view", "winapi", "reqwest" ]
+embed_ui = ["web-view", "winapi" ]
 
 [dependencies]
+actix-files = "0.2.2"
+actix-rt = "1.0.0"
+actix-web = "2.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 dirs = "2.0.2"
 lazy_static = "1.4.0"
-reqwest = { version = "0.9.3", optional = true }
-rocket = "0.4.4"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
+handlebars = { version = "3.1.0", features = ["dir_source"] }
 uuid = { version = "0.8", features = ["v4"] }
 web-view = { version = "0.6.3", features = ["edge"], optional = true }
-winapi = { version = "0.3.8", optional = true }
+winapi = { version = "0.3.8", features=["synchapi"], optional = true }
 zip = "0.5.5"
-
-[dependencies.rocket_contrib]
-version = "0.4.4"
-default-features = false
-features = ["handlebars_templates", "serve", "json"]
