--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ actix-web = "2.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 dirs = "2.0.2"
 lazy_static = "1.4.0"
+listenfd = "0.3"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 handlebars = { version = "3.1.0", features = ["dir_source"] }
